// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stringifyDirectives.gql "string" 1`] = `"type $ = \\"string\\""`;

exports[`stringifyDirectives.gql "test" 1`] = `"type $ = \\"test\\""`;

exports[`stringifyDirectives.gql ["a","b","c",null] 1`] = `
"type $ = [
  \\"a\\",
  \\"b\\",
  \\"c\\",
  null,
]"
`;

exports[`stringifyDirectives.gql [{x:5},{x:6},{y:[1,2,3]}] 1`] = `
"type $ = [
  {
    x: 5,
  },
  {
    x: 6,
  },
  {
    y: [
      1,
      2,
      3,
    ],
  },
]"
`;

exports[`stringifyDirectives.gql { x: 5, y: [1,2,3], z: { x: 5 } } 1`] = `
"type $ = {
  x: 5,
  y: [
    1,
    2,
    3,
  ],
  z: {
    x: 5,
  },
}"
`;

exports[`stringifyDirectives.gql 12345 1`] = `"type $ = 12345"`;

exports[`stringifyDirectives.gql null 1`] = `"type $ = null"`;

exports[`stringifyDirectives.gql null 2`] = `"type $ = null"`;

exports[`stringifyDirectives.gql null 3`] = `"type $ = null"`;

exports[`stringifyDirectives.gql null 4`] = `"type $ = null"`;

exports[`stringifyDirectives.gql null 5`] = `"type $ = null"`;
